--- a/src/Components/HomPageComp/Css Files/LeaderSpeak.css
+++ b/src/Components/HomPageComp/Css Files/LeaderSpeak.css
@@ -8,7 +8,7 @@
 }
 .LeaderSpeak-Heading {
   padding-left: 17%;
-  margin-top: 2%;
+  margin-top: 3%;
   width: 50%;
 }
 
@@ -152,7 +152,7 @@
   border: none; /* No border */
   cursor: pointer; /* Pointer cursor on hover */
   background-color: white;
-  margin-top: 13.5%;
+  margin-top: 16%;
   position: relative; /* Needed for absolute positioning of the underline */
 }
 
