--- a/src/Components/HomPageComp/Css Files/RecentNews.css
+++ b/src/Components/HomPageComp/Css Files/RecentNews.css
@@ -4,7 +4,7 @@
   margin-left: 17%;
   margin-top: 2%;
   margin-bottom: 5px;
-  font-size: 25px;
+  font-size: 26px;
   color: #ec2121;
   font-family: "PT Serif";
 }
