--- a/src/Components/HomPageComp/Css Files/Regulars.css
+++ b/src/Components/HomPageComp/Css Files/Regulars.css
@@ -32,6 +32,7 @@
 .Regulars-Text {
   color: rgba(0, 0, 0, 0.6);
   font-family: "Oswald", sans-serif;
+  font-weight: 400;
 }
 
 /* Responsive Styles */
